feature : security-login impl

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>bokgpt login test</h1>
     <a href="/login/kakao" class="btn btn-success active" role="button">Kakao Login</a>
-    <a href="/login/naver" class="btn btn-success active" role="button">Naver Login</a>
-    <a href="/login/google" class="btn btn-success active" role="button">Google Login</a>
+    <a href="/oauth2/authrization/naver" class="btn btn-success active" role="button">Naver Login</a>
+    <a href="/oauth2/authrization/google" class="btn btn-success active" role="button">Google Login</a>
 </body>
 </html>
